--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
 					<li class="item"><a href="#" class="link">Контакти</a></li>
 				</ul>
 				<ul class="site-con list">
-					<li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
+					<li class="site-con-item"
+						><a href="mailto:info@devstudio.com" class="mail-item link text"><svg viewBox="0 0 43 32" width="16" class="icon">
+							<use xlink:href="./images/sprite.svg#icon-envelope"></use>
+						</svg>info@devstudio.com</a></li
+					>
+					<li class="site-con-item"><a href="tel:+380961111111" class="phone-item link text"><svg viewBox="0 0 20 32" width="10" class="icon">
+						<use xlink:href="./images/sprite.svg#icon-smartphone"></use>
+					</svg>+38 096 111 11 11</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -46,19 +52,19 @@
 				<div class="conteiner">
 					<h2 class="visually-hidden">Скіллс</h2>
 					<ul class="feature-list list">
-						<li class="feature-item">
+						<li class="feature-item icon-one">
 							<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p class="text"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
 						</li>
-						<li class="feature-item">
+						<li class="feature-item icon-two">
 							<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
 							<p class="text"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
 						</li>
-						<li class="feature-item">
+						<li class="feature-item icon-three">
 							<h3 class="title">ПЛАНУВАННЯ</h3>
 							<p class="text"> Так само консультація з широким активом значною мірою зумовлює. </p>
 						</li>
-						<li class="feature-item">
+						<li class="feature-item icon-foure">
 							<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p class="text"> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
 						</li>
@@ -85,37 +91,202 @@
 							<img src="./images/img-4.jpg" alt="Ігор Дем'яненко" width="270" />
 							<h3 class="title">Ігор Дем'яненко</h3>
 							<p class="text">Product Designer</p>
+							<ul class="social-item-list list">
+								<li class="social-item">
+									<a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+										</svg> </a
+								></li>
+							</ul>
 						</li>
 						<li class="team-item">
 							<img src="./images/img-1.jpg" alt="Ольга Рєпіна" width="270" />
 							<h3 class="title">Ольга Рєпіна</h3>
 							<p class="text">Frontend Developer</p>
+							<ul class="social-item-list list">
+								<li class="social-item">
+									<a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+										</svg> </a
+								></li>
+							</ul>
 						</li>
 						<li class="team-item">
 							<img src="./images/img-2.jpg" alt="Микола Тарасов" width="270" />
 							<h3 class="title">Микола Тарасов</h3>
 							<p class="text">Marketing</p>
+							<ul class="social-item-list list">
+								<li class="social-item">
+									<a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+										</svg> </a
+								></li>
+							</ul>
 						</li>
 						<li class="team-item">
 							<img src="./images/img-3.jpg" alt="Михайло Єрмаков" width="270" />
 							<h3 class="title">Михайло Єрмаков</h3>
 							<p class="text">UI Designer</p>
+							<ul class="social-item-list list">
+								<li class="social-item">
+									<a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+										</svg> </a
+								></li>
+								<li class="social-item"
+									><a href="">
+										<svg viewBox="0 0 100 100" width="20">
+											<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+										</svg> </a
+								></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</section>
-		</main>
-		<footer class="footer-bg">
-			<div class="conteiner">
-				<a href="./index.html" class="logo footer">Web<span class="logo-footer">Studio</span></a>
-				<address>
-					<ul class="footer-list list">
-						<li>
-							<a href="https://goo.gl/maps/hFcLkhoPXMKdGGqA7" target="_blank"> м. Київ, пр-т Лесі Українки, 26 </a>
-						</li>
-						<li><a href="mailto:info@devstudio.com" class="footer-list-link">info@devstudio.com</a></li>
-						<li><a href="tel:+380961111111" class="footer-list-link">+38 096 111 11 11</a></li>
+			<!-- Client -->
+			<section class="section client">
+				<div class="conteiner">
+					<h2 class="section-title">Постійні клієнти</h2>
+					<ul class="client-list list">
+						<li class="client-item"
+							><a href="">
+								<svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo"></use></svg></a
+						></li>
+						<li class="client-item"><a href=""><svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo-1"></use></svg></a></li>
+						<li class="client-item"><a href=""><svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo-2"></use></svg></a></li>
+						<li class="client-item"><a href=""><svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo-3"></use></svg></a></li>
+						<li class="client-item"><a href=""><svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo-4"></use></svg></a></li>
+						<li class="client-item"><a href=""><svg viewBox="0 0 57 32" width="106">
+									<use xlink:href="./images/sprite.svg#icon-Logo-5"></use></svg></a></li>
 					</ul>
+				</div>
+			</section>
+		</main>
+		<!-- Footer -->
+		<footer class="footer-bg">
+			<div class="conteiner footer-box">
+				<div class="address">
+
+					<a href="./index.html" class="logo footer">Web<span class="logo-footer">Studio</span></a>
+					<address>
+						<ul class="footer-list list">
+							<li>
+								<a href="https://goo.gl/maps/hFcLkhoPXMKdGGqA7" target="_blank"> м. Київ, пр-т Лесі Українки, 26 </a>
+							</li>
+							<li><a href="mailto:info@devstudio.com" class="footer-list-link">info@devstudio.com</a></li>
+							<li><a href="tel:+380961111111" class="footer-list-link">+38 096 111 11 11</a></li>
+						</ul>
+				</div>
+				<div class="footer-social">
+					<h3 class="text">ПРИЄДНУЙТЕСЬ</h3>					
+					<ul class="social-item-list list">
+							<li class="social-item">
+								<a href="">
+									<svg viewBox="0 0 100 100" width="20">
+										<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-item"
+								><a href="">
+									<svg viewBox="0 0 100 100" width="20">
+										<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+									</svg> </a
+							></li>
+							<li class="social-item"
+								><a href="">
+									<svg viewBox="0 0 100 100" width="20">
+										<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+									</svg> </a
+							></li>
+							<li class="social-item"
+								><a href="">
+									<svg viewBox="0 0 100 100" width="20">
+										<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+									</svg></a
+							></li>
+					</ul>					
+				</div>
 				</address>
 			</div>
 		</footer>
