--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,19 @@
 				</ul>
 				<ul class="site-con list">
 					<li class="site-con-item"
-						><a href="mailto:info@devstudio.com" class="mail-item link text"><svg viewBox="0 0 43 32" width="16" class="icon">
-							<use xlink:href="./images/sprite.svg#icon-envelope"></use>
-						</svg>info@devstudio.com</a></li
+						><a href="mailto:info@devstudio.com" class="mail-item link text"
+							><svg viewBox="0 0 43 32" width="16" class="icon">
+								<use xlink:href="./images/sprite.svg#icon-envelope"></use></svg
+							>info@devstudio.com</a
+						></li
 					>
-					<li class="site-con-item"><a href="tel:+380961111111" class="phone-item link text"><svg viewBox="0 0 20 32" width="10" class="icon">
-						<use xlink:href="./images/sprite.svg#icon-smartphone"></use>
-					</svg>+38 096 111 11 11</a></li>
+					<li class="site-con-item"
+						><a href="tel:+380961111111" class="phone-item link text"
+							><svg viewBox="0 0 20 32" width="10" class="icon">
+								<use xlink:href="./images/sprite.svg#icon-smartphone"></use></svg
+							>+38 096 111 11 11</a
+						></li
+					>
 				</ul>
 			</nav>
 		</header>
@@ -123,7 +129,6 @@
 		<footer class="footer-bg">
 			<div class="conteiner footer-box">
 				<div class="address">
-
 					<a href="./index.html" class="logo footer">Web<span class="logo-footer">Studio</span></a>
 					<address>
 						<ul class="footer-list list">
@@ -133,38 +138,37 @@
 							<li><a href="mailto:info@devstudio.com" class="footer-list-link">info@devstudio.com</a></li>
 							<li><a href="tel:+380961111111" class="footer-list-link">+38 096 111 11 11</a></li>
 						</ul>
+					</address>
 				</div>
 				<div class="footer-social">
-					<h3 class="text">ПРИЄДНУЙТЕСЬ</h3>					
+					<h3 class="text">ПРИЄДНУЙТЕСЬ</h3>
 					<ul class="social-item-list list">
-							<li class="social-item">
-								<a href="">
-									<svg viewBox="0 0 100 100" width="20">
-										<use xlink:href="./images/sprite.svg#icon-instagram"></use>
-									</svg>
-								</a>
-							</li>
-							<li class="social-item"
-								><a href="">
-									<svg viewBox="0 0 100 100" width="20">
-										<use xlink:href="./images/sprite.svg#icon-twitter"></use>
-									</svg> </a
-							></li>
-							<li class="social-item"
-								><a href="">
-									<svg viewBox="0 0 100 100" width="20">
-										<use xlink:href="./images/sprite.svg#icon-facebook"></use>
-									</svg> </a
-							></li>
-							<li class="social-item"
-								><a href="">
-									<svg viewBox="0 0 100 100" width="20">
-										<use xlink:href="./images/sprite.svg#icon-linkedin"></use>
-									</svg></a
-							></li>
-					</ul>					
+						<li class="social-item">
+							<a href="">
+								<svg viewBox="0 0 100 100" width="20">
+									<use xlink:href="./images/sprite.svg#icon-instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="social-item"
+							><a href="">
+								<svg viewBox="0 0 100 100" width="20">
+									<use xlink:href="./images/sprite.svg#icon-twitter"></use>
+								</svg> </a
+						></li>
+						<li class="social-item"
+							><a href="">
+								<svg viewBox="0 0 100 100" width="20">
+									<use xlink:href="./images/sprite.svg#icon-facebook"></use>
+								</svg> </a
+						></li>
+						<li class="social-item"
+							><a href="">
+								<svg viewBox="0 0 100 100" width="20">
+									<use xlink:href="./images/sprite.svg#icon-linkedin"></use></svg></a
+						></li>
+					</ul>
 				</div>
-				</address>
 			</div>
 		</footer>
 	</body>
