--- a/index.html
+++ b/index.html
@@ -231,32 +231,32 @@
 					<ul class="client-list list">
 						<li class="client-item"
 							><a href="">
-								<svg viewBox="0 0 57 32" width="106">
+								<svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo"></use></svg></a
 						></li>
 						<li class="client-item"
 							><a href=""
-								><svg viewBox="0 0 57 32" width="106">
+								><svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo-1"></use></svg></a
 						></li>
 						<li class="client-item"
 							><a href=""
-								><svg viewBox="0 0 57 32" width="106">
+								><svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo-2"></use></svg></a
 						></li>
 						<li class="client-item"
 							><a href=""
-								><svg viewBox="0 0 57 32" width="106">
+								><svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo-3"></use></svg></a
 						></li>
 						<li class="client-item"
 							><a href=""
-								><svg viewBox="0 0 57 32" width="106">
+								><svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo-4"></use></svg></a
 						></li>
 						<li class="client-item"
 							><a href=""
-								><svg viewBox="0 0 57 32" width="106">
+								><svg viewBox="0 0 57 32" width="106" class="client-icon">
 									<use xlink:href="./images/sprite.svg#icon-Logo-5"></use></svg></a
 						></li>
 					</ul>
@@ -279,7 +279,7 @@
 					</address>
 				</div>
 				<div class="footer-social">
-					<h3 class="text">ПРИЄДНУЙТЕСЬ</h3>
+					<p class="text">ПРИЄДНУЙТЕСЬ</p>
 					<ul class="social-item-list list">
 						<li class="social-item">
 							<a href="">
