--- a/portfolio.html
+++ b/portfolio.html
@@ -60,67 +60,94 @@
 
 					<ul class="filter-list list">
 						<li class="filter-item">
-							<img src="./images/portfolio/img.jpg" alt="Веб-сайт_01" width="370" />
-							<div class="border">
-								<h2 class="title">Технокряк</h2>
-								<p class="text">Веб-сайт</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img.jpg" alt="Веб-сайт_01" width="370" />
+								<div class="border">
+									<h2 class="title">Технокряк</h2>
+									<p class="text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-1.jpg" alt="Дизайн_01" width="370" />
-							<div class="border">
-								<h2 class="title">Постер New Orlean vs Golden Star</h2>
-								<p class="text">Дизайн</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-1.jpg" alt="Дизайн_01" width="370" />
+								<div class="border">
+									<h2 class="title">Постер New Orlean vs Golden Star</h2>
+									<p class="text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-2.jpg" alt="Додаток_01" width="370" />
-							<div class="border">
-								<h2 class="title">Ресторан Seafood</h2>
-								<p class="text">Додаток</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-2.jpg" alt="Додаток_01" width="370" />
+								<div class="border">
+									<h2 class="title">Ресторан Seafood</h2>
+									<p class="text">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-3.jpg" alt="Маркетинг_01" width="370" />
-							<div class="border">
-								<h2 class="title">Проєкт Prime</h2>
-								<p class="text">Маркетинг</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-3.jpg" alt="Маркетинг_01" width="370" />
+								<div class="border">
+									<h2 class="title">Проєкт Prime</h2>
+									<p class="text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-4.jpg" alt="Додаток_02" width="370" />
-							<div class="border">
-								<h2 class="title">Проєкт Boxes</h2>
-								<p class="text">Додаток</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-4.jpg" alt="Додаток_02" width="370" />
+								<div class="border">
+									<h2 class="title">Проєкт Boxes</h2>
+									<p class="text">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-5.jpg" alt="Веб-сайт_02" width="370" />
-							<div class="border">
-								<h2 class="title">Inspiration has no Borders</h2>
-								<p class="text">Веб-сайт</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-5.jpg" alt="Веб-сайт_02" width="370" />
+								<div class="border">
+									<h2 class="title">Inspiration has no Borders</h2>
+									<p class="text">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-6.jpg" alt="Дизайн_02" width="370" />
-							<div class="border">
-								<h2 class="title">Видання Limited Edition</h2>
-								<p class="text">Дизайн</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-6.jpg" alt="Дизайн_02" width="370" />
+								<div class="border">
+									<h2 class="title">Видання Limited Edition</h2>
+									<p class="text">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-7.jpg" alt="Маркетинг_02" width="370" />
-							<div class="border">
-								<h2 class="title">Проєкт LAB</h2>
-								<p class="text">Маркетинг</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-7.jpg" alt="Маркетинг_02" width="370" />
+								<div class="border">
+									<h2 class="title">Проєкт LAB</h2>
+									<p class="text">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="filter-item">
-							<img src="./images/portfolio/img-8.jpg" alt="Додаток_03" width="370" />
-							<div class="border">
-								<h2 class="title">Growing Business</h2>
-								<p class="text">Додаток</p>
-							</div>
+							<a href="" class="filter-item-list">
+
+								<img src="./images/portfolio/img-8.jpg" alt="Додаток_03" width="370" />
+								<div class="border">
+									<h2 class="title">Growing Business</h2>
+									<p class="text">Додаток</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
