--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
 							</a>
 						</li>
 						<li class="filter-item">
-							<a href="" class="filter-item-list">
+							<a href="" class="p">
 
 								<img src="./images/portfolio/img-8.jpg" alt="Додаток_03" width="370" />
 								<div class="border">
@@ -168,7 +168,7 @@
 					</address>
 				</div>
 				<div class="footer-social">
-					<h3 class="text">ПРИЄДНУЙТЕСЬ</h3>
+					<p class="text">ПРИЄДНУЙТЕСЬ</p>
 					<ul class="social-item-list list">
 						<li class="social-item">
 							<a href="">
